--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <canvas>aa</canvas>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
